tests/checker/fail/missing_main.can
Greeting = String

Unit => Greeting {
    "hello"
}
